--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,6 +42,7 @@ outputs:
         - glfw
         - fftw
         - freetype
+        - zlib
         # unvendored
         - libics
         - libtiff
@@ -101,6 +102,7 @@ outputs:
         - glfw
         - fftw
         - freetype
+        - zlib
         # unvendored
         - libics
         - libtiff
